reasons, this attempt didn't work out. Several commits for it can be found
[here.](https://github.com/ernieIzde8ski/mus_sort/compare/5fa2ee7d3d69%5E...33f326eab029)

## module_v2 : 0.0.1 - 2022.07.07

- add various files to make suitable as a module (README.md, pyproject.toml, etc)
- create musort directory for library purposes:
  - add command-line argument parsing via `typed-argument-parser`
  - add various utility functions, classes for sorting
  - add locale folder to support different operating systems (in theory)
- implement --folder-mode sorting

## module_v2 : 0.0.2 - 2022.07.07

Modified module structure.

- move src/musort/ to musort/
- add musort/info.py for storing package information
- add setup.py and build.sh scripts for packaging and uploading to PyPI

## module_v2 : 0.0.3 - 2022.12.20

Bug fixes.

- fix exception logs not being printed due to extra argument
- fix minor type issue in MusicFile.get arising from TinyTag.artist possibly being None
- modify --folder-mode sorting to catch all OSErrors, as opposed to just FileExistsError, PermissionError
- move musort/locale/ to musort/os_locale/ so as to avoid conflict with the standard library

## master : 0.1.0 - 2022.12.28

Updates to build process, ease-of-access, and project layout.

- add support for calling the script as either `python -m musort` or simply `-musort`
- add support for reading config files in the current working directory
- move old master branch to original-branch, copy module_v2 into its place

- add CHANGELOG
- add pre-commit script for automatic `black` formatting
- fix exception logging not being logged with severity `logging.ERROR`
- fix --replace-duplicates param not working with folders in --folder-mode
- modify requirements-dev.txt to depend on requirements.txt instead of vice versa
- move musort/ once more to src/musort/, to make script change possible
- remove build.sh in favor of Makefile
- update setup.py, README.md to match all stated changes